# ace_napi

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  libnapi.ndk.json  napi.gni  ohos.build
callback_scope_manager/: native_callback_scope_manager.cpp  native_callback_scope_manager.h
interfaces/inner_api/napi/: native_common.h
interfaces/innerkits/napi/: native_node_api.h
interfaces/kits/napi/: native_api.h  native_common.h  native_node_api.h
module_manager/: native_module_manager.cpp  native_module_manager.h
native_engine/: native_api.cpp  native_api_internal.h  native_async_context.h  native_async_work.cpp  native_async_work.h  native_deferred.h  native_engine.cpp  native_engine.h  native_node_api.cpp  native_property.h  native_reference.h  native_safe_async_work.cpp  native_safe_async_work.h  native_value.h
native_engine/impl/ark/: BUILD.gn  ark_headers.h  ark_native_deferred.cpp  ark_native_deferred.h  ark_native_engine.cpp  ark_native_engine.h  ark_native_reference.cpp  ark_native_reference.h
native_engine/impl/ark/native_value/: ark_native_array.cpp  ark_native_array.h  ark_native_array_buffer.cpp  ark_native_array_buffer.h  ark_native_big_int.cpp  ark_native_big_int.h  ark_native_boolean.cpp  ark_native_boolean.h  ark_native_data_view.cpp  ark_native_data_view.h  ark_native_date.cpp  ark_native_date.h  ark_native_external.cpp  ark_native_external.h  ark_native_function.cpp  ark_native_function.h  ark_native_number.cpp  ark_native_number.h  ark_native_object.cpp  ark_native_object.h  ark_native_string.cpp  ark_native_string.h  ark_native_typed_array.cpp  ark_native_typed_array.h  ark_native_value.cpp  ark_native_value.h
native_engine/impl/jerryscript/: jerryscript_ext.cpp  jerryscript_headers.h  jerryscript_native_deferred.cpp  jerryscript_native_deferred.h  jerryscript_native_engine.cpp  jerryscript_native_engine.h  jerryscript_native_reference.cpp  jerryscript_native_reference.h
native_engine/impl/jerryscript/native_value/: jerryscript_native_array.cpp  jerryscript_native_array.h  jerryscript_native_array_buffer.cpp  jerryscript_native_array_buffer.h  jerryscript_native_big_int.cpp  jerryscript_native_big_int.h  jerryscript_native_boolean.cpp  jerryscript_native_boolean.h  jerryscript_native_buffer.cpp  jerryscript_native_buffer.h  jerryscript_native_data_view.cpp  jerryscript_native_data_view.h  jerryscript_native_date.cpp  jerryscript_native_date.h  jerryscript_native_external.cpp  jerryscript_native_external.h  jerryscript_native_function.cpp  jerryscript_native_function.h  jerryscript_native_number.cpp  jerryscript_native_number.h  jerryscript_native_object.cpp  jerryscript_native_object.h  jerryscript_native_string.cpp  jerryscript_native_string.h  jerryscript_native_typed_array.cpp  jerryscript_native_typed_array.h  jerryscript_native_value.cpp  jerryscript_native_value.h
native_engine/impl/quickjs/: BUILD.gn  quickjs_ext.cpp  quickjs_headers.h  quickjs_native_deferred.cpp  quickjs_native_deferred.h  quickjs_native_engine.cpp  quickjs_native_engine.h  quickjs_native_reference.cpp  quickjs_native_reference.h
native_engine/impl/quickjs/native_value/: quickjs_native_array.cpp  quickjs_native_array.h  quickjs_native_array_buffer.cpp  quickjs_native_array_buffer.h  quickjs_native_big_int.cpp  quickjs_native_big_int.h  quickjs_native_boolean.cpp  quickjs_native_boolean.h  quickjs_native_buffer.cpp  quickjs_native_buffer.h  quickjs_native_data_view.cpp  quickjs_native_data_view.h  quickjs_native_date.cpp  quickjs_native_date.h  quickjs_native_external.cpp  quickjs_native_external.h  quickjs_native_function.cpp  quickjs_native_function.h  quickjs_native_number.cpp  quickjs_native_number.h  quickjs_native_object.cpp  quickjs_native_object.h  quickjs_native_string.cpp  quickjs_native_string.h  quickjs_native_typed_array.cpp  quickjs_native_typed_array.h  quickjs_native_value.cpp  quickjs_native_value.h
native_engine/impl/v8/: BUILD.gn  v8_headers.h  v8_native_deferred.cpp  v8_native_deferred.h  v8_native_engine.cpp  v8_native_engine.h  v8_native_reference.cpp  v8_native_reference.h
native_engine/impl/v8/native_value/: v8_native_array.cpp  v8_native_array.h  v8_native_array_buffer.cpp  v8_native_array_buffer.h  v8_native_boolean.cpp  v8_native_boolean.h  v8_native_data_view.cpp  v8_native_data_view.h  v8_native_external.cpp  v8_native_external.h  v8_native_function.cpp  v8_native_function.h  v8_native_number.cpp  v8_native_number.h  v8_native_object.cpp  v8_native_object.h  v8_native_string.cpp  v8_native_string.h  v8_native_typed_array.cpp  v8_native_typed_array.h  v8_native_value.cpp  v8_native_value.h
reference_manager/: native_reference_manager.cpp  native_reference_manager.h
sample/native_module_ability/: BUILD.gn  native_module_ability.cpp
sample/native_module_calc/: BUILD.gn  calc.js  napi_calc.cpp  napi_number.cpp
sample/native_module_callback/: BUILD.gn  js_callback.cpp
sample/native_module_demo/: BUILD.gn  demo_javascript_class.cpp  demo_javascript_class.h  native_module_demo.cpp
sample/native_module_netserver/: BUILD.gn  event_target.cpp  event_target.h  js_netserver.cpp  native_module_netserver.cpp  net_server.cpp  net_server.h  netserver.cpp  netserver.h
sample/native_module_storage/: BUILD.gn  js_storage.cpp
sample/native_module_systemtest/: BUILD.gn  test.h  test_jerryscript.cpp  test_napi.cpp  test_quickjs.cpp
scope_manager/: native_scope_manager.cpp  native_scope_manager.h
test/unittest/: BUILD.gn  test.h  test_ark.cpp  test_jerryscript.cpp  test_napi.cpp  test_napi_ext.cpp  test_napi_threadsafe.cpp  test_quickjs.cpp  ut.gni
test/unittest/common/: test_common.h
test/unittest/engine/: test.h  test_ark.cpp  test_jerryscript.cpp  test_quickjs.cpp  test_v8.cpp
utils/: assert.h  log.cpp  log.h  macros.h
