# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

napi_sources = [
  "//foundation/arkui/napi/callback_scope_manager/native_callback_scope_manager.cpp",
  "//foundation/arkui/napi/module_manager/native_module_manager.cpp",
  "//foundation/arkui/napi/native_engine/native_api.cpp",
  "//foundation/arkui/napi/native_engine/native_async_work.cpp",
  "//foundation/arkui/napi/native_engine/native_engine.cpp",
  "//foundation/arkui/napi/native_engine/native_node_api.cpp",
  "//foundation/arkui/napi/native_engine/native_safe_async_work.cpp",
  "//foundation/arkui/napi/reference_manager/native_reference_manager.cpp",
  "//foundation/arkui/napi/scope_manager/native_scope_manager.cpp",
  "//foundation/arkui/napi/utils/log.cpp",
]

declare_args() {
  napi_enable_container_scope = true
}
