# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/config/subsystem/aafwk/config.gni")
  import("//build/lite/config/test.gni")

  shared_library("demo") {
    include_dirs = [
      "//third_party/node/src",
      "//foundation/ace/napi/interfaces/kits",
    ]

    sources = [
      "demo_javascript_class.cpp",
      "native_module_demo.cpp",
    ]

    cflags = [ "-std=c++14" ]
    cflags_cc = cflags

    deps = [
      "//base//hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//foundation/ace/napi:ace_napi",
    ]
  }
} else {
  import("//build/ohos.gni")

  ohos_shared_library("demo") {
    include_dirs = [
      "//third_party/node/src",
      "//foundation/ace/napi/interfaces/kits",
    ]

    sources = [
      "demo_javascript_class.cpp",
      "native_module_demo.cpp",
    ]

    deps = [ "//foundation/ace/napi:ace_napi" ]

    if ("${current_os}_${current_cpu}" != "mingw_x86_64" &&
        "${current_os}_${current_cpu}" != "mac_x64") {
      if (is_standard_system) {
        external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
      } else {
        external_deps = [ "hilog:libhilog" ]
      }
    }

    relative_install_dir = "module"

    subsystem_name = "ace"
    part_name = "napi"
  }
}
