# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("netserver") {
  include_dirs = [
    "//third_party/libuv/include",
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/native/base/include",
  ]

  sources = [
    "event_target.cpp",
    "js_netserver.cpp",
    "native_module_netserver.cpp",
    "net_server.cpp",
  ]

  deps = [
    "//foundation/ace/napi:ace_napi",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utilsecurec",
  ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  relative_install_dir = "module"

  subsystem_name = "ace"
  part_name = "napi"
}
